[package]
name = "chroma"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytemuck = {version = "1.23.2", features = ["derive"]}
dotenvy = "0.15.7"
env_logger = "0.11.8"
pollster = "0.4.0"
thiserror = "2.0.16"
tracing = "0.1.41"
uuid = {version = "1.18.0", features = ["v4"]}
wgpu = "26.0.1"
winit = "0.30.12"
